fix_truncate_maxlenght

--- a/app/assets/stylesheets/education/course.scss
+++ b/app/assets/stylesheets/education/course.scss
@@ -86,7 +86,7 @@
 }
 
 .ul-courses {
-  height: 300px !important;
+  max-height: 300px !important;
   overflow: auto !important;
 }
 
